# color_test

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt
sources/src/: main.cpp
